# snapsr

./: Cargo.toml  LICENSE  README.md  flake.nix
nix/: default.nix  flake.nix
src/: logger.rs  main.rs  snaps.rs  snapsr  ui.rs
