[package]
name = "snapsr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
toml = "0.8.23"
serde = { version = "=1.0.219", features = ["derive"]}
serde_json = "=1.0.1"
glob = "0.3.2"
chrono = {version = "=0.4.9", features = ["serde"]}
#ratatui = { version = "0.29.0", features = ["all-widgets"] }
#crossterm = "0.28.1"
